fix section map from overflow by adding container

--- a/css/base.css
+++ b/css/base.css
@@ -9,6 +9,7 @@
   --gold: #f2c94c;
   --orange: #F2994A;
   --cream: #e0ca81;  
+  --cream-light: #f7e5a7;  
  
   --gradient: radial-gradient( 50% 50% at 50% 50%, #f5de93 57.81%, #e0ca81 97.4% );
 
