--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,22 @@
+.contact {
+  position: relative;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.contact-left {
+  position:relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+}
+
+.contact-right {
+  display: flex;
+  justify-content: center;
+}
 .contact-header {
   /* font-size: var(--h4); */
   color: var(--black);
@@ -9,25 +28,7 @@
   font-family: var(--font-second);
 }
 
-.contact {
-  position: relative;
-}
 
-.contact-left {
-  position:relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: -1;
-}
-
-
-.contact {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
 
 .contact-form {
   background-color: var(--gray-dark);
@@ -111,7 +112,7 @@ legend {
 .input-group input:focus,
 .input-group textarea:focus
  {
-  background-color: var(--cream);
+  background-color: var(--cream-light);
 }
 
 @media (max-width: 1100px) {
